WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41809
Lazy mode of parser allows invalid syntax in object literals.
https://bugs.webkit.org/show_bug.cgi?id=41809
Summary
Lazy mode of parser allows invalid syntax in object literals.
Oliver Hunt
Reported
2010-07-07 16:05:41 PDT
Lazy mode of parser allows invalid syntax in object literals.
Attachments
Patch
(2.32 KB, patch)
2010-07-07 16:10 PDT
,
Oliver Hunt
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2010-07-07 16:10:05 PDT
Created
attachment 60796
[details]
Patch
Darin Adler
Comment 2
2010-07-07 16:16:11 PDT
Comment on
attachment 60796
[details]
Patch What about a test case?
Geoffrey Garen
Comment 3
2010-07-07 16:16:27 PDT
Comment on
attachment 60796
[details]
Patch r=me
Oliver Hunt
Comment 4
2010-07-07 16:28:11 PDT
Committed
r62727
: <
http://trac.webkit.org/changeset/62727
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug