2010-07-07  Oliver Hunt  <oliver@apple.com>

Reviewed by Geoffrey Garen.

        Lazy mode of parser allows invalid syntax in object literals.
        https://bugs.webkit.org/show_bug.cgi?id=41809

        Make the parser itself validate getter and setter syntax rather
        than offloading it to the AST builder.

        * parser/ASTBuilder.h:
        (JSC::ASTBuilder::createGetterOrSetterProperty):
        * parser/JSParser.cpp:
        (JSC::JSParser::parseProperty):

Canonical link: https://commits.webkit.org/53626@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62727 268f45cc-cd09-0410-ab3c-d52691b4dbfc