JavaScriptCore/parser/JSParser.cpp
@@ -1168,6 +1168,7 @@ template <class TreeBuilder> TreeProperty JSParser::parseProperty(TreeBuilder& c
         int openBracePos = 0;
         int closeBracePos = 0;
         int bodyStartLine = 0;
+        failIfFalse(*ident == m_globalData->propertyNames->get || *ident == m_globalData->propertyNames->set);
         failIfFalse(parseFunctionInfo<FunctionNeedsName>(context, accessorName, parameters, body, openBracePos, closeBracePos, bodyStartLine));
         return context.createGetterOrSetterProperty(ident, accessorName, parameters, body, openBracePos, closeBracePos, bodyStartLine, m_lastLine);
     }
